Bug #8480
nvmeadm should ignore 0-sized namespaces by default
Start date:
2017-07-10
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
Some NVMe devices come with some extra namespaces that use an invalid block size. nvmeadm will list them as 0-sized, and as they aren't really useful (yet?) that will create a load of output that is of little interest. They should be hidden unless -v is specified.
Updated by Hans Rosenfeld over 3 years ago
Webrev: https://grumpf.hope-2000.org/illumos-8480/
Testing: This has been tested on a bunch of devices with 0-sized namespaces.
This change has been in illumos-joyent since July.
Updated by Electric Monk over 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 1e167260e7cd91e04759854b0ae61b36cd47a218
commit 1e167260e7cd91e04759854b0ae61b36cd47a218 Author: Hans Rosenfeld <hans.rosenfeld@joyent.com> Date: 2017-09-12T14:59:24.000Z 8480 nvmeadm should ignore 0-sized namespaces by default Reviewed by: Patrick Mooney <patrick.mooney@joyent.com> Reviewed by: Jerry Jelinek <jerry.jelinek@joyent.com> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Richard Lowe <richlowe@richlowe.net>